--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
@@ -9,31 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel='dns-prefetch' href='//maps.googleapis.com' />
-<link rel='dns-prefetch' href='//s.w.org' />
-<link rel="alternate" type="application/rss+xml" title="DotKernel PHP Application Framework &raquo; Feed" href="https://www.dotkernel.com/feed/" />
-<link rel="alternate" type="application/rss+xml" title="DotKernel PHP Application Framework &raquo; Comments Feed" href="https://www.dotkernel.com/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="DotKernel PHP Application Framework &raquo; Documentation Comments Feed" href="https://www.dotkernel.com/docs/feed/" />
-		<script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.2.1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.2.1\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/www.dotkernel.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.7.3"}};
-			!function(a,b,c){function d(a){var b,c,d,e,f=String.fromCharCode;if(!k||!k.fillText)return!1;switch(k.clearRect(0,0,j.width,j.height),k.textBaseline="top",k.font="600 32px Arial",a){case"flag":return k.fillText(f(55356,56826,55356,56819),0,0),!(j.toDataURL().length<3e3)&&(k.clearRect(0,0,j.width,j.height),k.fillText(f(55356,57331,65039,8205,55356,57096),0,0),b=j.toDataURL(),k.clearRect(0,0,j.width,j.height),k.fillText(f(55356,57331,55356,57096),0,0),c=j.toDataURL(),b!==c);case"emoji4":return k.fillText(f(55357,56425,55356,57341,8205,55357,56507),0,0),d=j.toDataURL(),k.clearRect(0,0,j.width,j.height),k.fillText(f(55357,56425,55356,57341,55357,56507),0,0),e=j.toDataURL(),d!==e}return!1}function e(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i,j=b.createElement("canvas"),k=j.getContext&&j.getContext("2d");for(i=Array("flag","emoji4"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
-		</script>
-		<style type="text/css">
-img.wp-smiley,
-img.emoji {
-	display: inline !important;
-	border: none !important;
-	box-shadow: none !important;
-	height: 1em !important;
-	width: 1em !important;
-	margin: 0 .07em !important;
-	vertical-align: -0.1em !important;
-	background: none !important;
-	padding: 0 !important;
-}
-</style>
 
 <link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/bootstrap.min.css?ver=3.1.1">
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/flexslider.css?ver=2.2.0">
 <link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/app.css?ver=1">
 <style id='roots_app-inline-css' type='text/css'>
 /* Navigation Padding */
@@ -42,10 +20,8 @@ img.emoji {
 </style>
 
 <link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/responsive.css?ver=1">
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel-child/style.css?ver=4.7.3">
-
 <script type='text/javascript' src='https://www.dotkernel.com/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/modernizr-2.7.0.min.js?ver=2.7.0'></script>
+
 
 <link rel='https://api.w.org/' href='https://www.dotkernel.com/wp-json/' />
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://www.dotkernel.com/xmlrpc.php?rsd" />
@@ -53,14 +29,7 @@ img.emoji {
 <meta name="generator" content="WordPress 4.7.3" />
 <link rel="canonical" href="https://www.dotkernel.com/docs/" />
 <link rel='shortlink' href='https://www.dotkernel.com/?p=60' />
-<link rel="alternate" type="application/json+oembed" href="https://www.dotkernel.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.dotkernel.com%2Fdocs%2F" />
-<link rel="alternate" type="text/xml+oembed" href="https://www.dotkernel.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.dotkernel.com%2Fdocs%2F&#038;format=xml" />
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/plugins/wp-page-numbers/classic/wp-page-numbers.css" type="text/css" media="screen" /><!--[if lt IE 9]>
-<script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
 
-<link rel="alternate" type="application/rss+xml" title="DotKernel PHP Application Framework Feed" href="https://www.dotkernel.com/feed/">
   
 <link rel="shortcut icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
 <link rel="icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
@@ -123,7 +92,7 @@ img.emoji {
 					<section id="" class=" content-editor "  >
 				        <div class="row">
 				            <div class="col-md-12">
-				            <button class="edit_button">Edit on GitHub</button>
+				            <a href="#" class="edit_button">Edit on GitHub</a>
 							{{ content }}
 							</div>                            	
 				        </div>
@@ -138,18 +107,7 @@ img.emoji {
     
     		</div><!-- /.main -->    
         <aside class="sidebar side-left col-sm-4 col-sm-pull-8" role="complementary">
-		<style type="text/css">
-			.noTopMargin{
-				/*margin-top: 0px !important;*/
-			}
-			.docs_widget h3 { margin-top: 25px; }
-			.docs_widget ul { display: block; margin: 0px; padding: 0px; }
-			.docs_widget ul li { display: block; }
-			.docs_widget ul li a { display: block; padding: 8px 0; border-bottom: 1px solid #e6e6e6; }
-		</style>
-	<div class="widget-inner docs_widget">
-	<!--<h3 class="widget-title"><a href="https://www.dotkernel.com/getting-started/" target="_self">Getting Started</a></h3><ul class="left_menu"><li><a href="https://www.dotkernel.com/docs/what-is-dotkernel/" target="_self">What is DotKernel</a></li><li><a href="https://www.dotkernel.com/docs/system-requirements/" target="_self">System Requirements</a></li><li><a href="https://www.dotkernel.com/changelog/" target="_self">ChangeLog</a></li><li><a href="https://www.dotkernel.com/docs/history/" target="_self">History</a></li><li><a href="https://www.dotkernel.com/docs/download/" target="_self">Download</a></li><li><a href="https://www.dotkernel.com/docs/installation/" target="_self">Installation</a></li><li><a href="https://www.dotkernel.com/docs/naming-conventions/" target="_self">Naming Conventions</a></li><li><a href="https://www.dotkernel.com/docs/php-documentation" target="_self">PHP Documentation</a></li></ul><h3 class="widget-title"><a href="https://www.dotkernel.com/basic-topics/" target="_self">Basic Topics</a></h3><ul class="left_menu"><li><a href="https://www.dotkernel.com/docs/hmvc-structure/" target="_self">HMVC structure</a></li><li><a href="https://www.dotkernel.com/docs/dotkernel-structure/" target="_self">DotKernel structure</a></li><li><a href="https://www.dotkernel.com/docs/module-structure/" target="_self">Module</a></li><li><a href="https://www.dotkernel.com/docs/dots/" target="_self">Dots</a></li><li><a href="https://www.dotkernel.com/docs/model-view-controller/" target="_self">Model-View-Controller</a></li><li><a href="https://www.dotkernel.com/docs/application-ini/" target="_self">application.ini</a></li><li><a href="https://www.dotkernel.com/docs/resource-xml/" target="_self">resource.xml</a></li><li><a href="https://www.dotkernel.com/docs/url-pattern/" target="_self">URL pattern</a></li><li><a href="https://www.dotkernel.com/docs/menu-xml/" target="_self">menu.xml</a></li><li><a href="https://www.dotkernel.com/docs/dots-xml/" target="_self">dots.xml</a></li><li><a href="https://www.dotkernel.com/docs/router-xml/" target="_self">router.xml</a></li></ul><h3 class="widget-title"><a href="https://www.dotkernel.com/how-to/" target="_self">How to ...</a></h3><ul class="left_menu"><li><a href="https://www.dotkernel.com/docs/create-a-module/" target="_self">Create a module</a></li><li><a href="https://www.dotkernel.com/docs/create-a-dots/" target="_self">Create a dots</a></li><li><a href="https://www.dotkernel.com/docs/handle-sessions/" target="_self">Handle sessions</a></li><li><a href="https://www.dotkernel.com/docs/work-with-environments/" target="_self">Work with environments</a></li></ul><h3 class="widget-title">Dot_Template</h3><ul class="left_menu"><li><a href="https://www.dotkernel.com/docs/concept/" target="_self">Concept</a></li><li><a href="https://www.dotkernel.com/docs/simple-example" target="_self">Simple Example</a></li><li><a href="https://www.dotkernel.com/docs/loading-files/" target="_self">Loading files</a></li><li><a href="https://www.dotkernel.com/docs/defining-blocks/" target="_self">Defining blocks</a></li><li><a href="https://www.dotkernel.com/docs/setting-variables/" target="_self">Setting variables</a></li><li><a href="https://www.dotkernel.com/docs/parsing-blocks/" target="_self">Parsing blocks</a></li><li><a href="https://www.dotkernel.com/docs/finish-output/" target="_self">Finish and output</a></li><li><a href="https://www.dotkernel.com/docs/nested-blocks/" target="_self">Nested blocks</a></li></ul>
-	-->
+
 	<div id="dk3DocsSideMenu">
 		<h2 id="before-starting">Before starting</h2>
 		<ul>
@@ -169,6 +127,7 @@ img.emoji {
 		  <li><a href="/dotkernel/Packages/">dot-* packages</a></li>
 		</ul>
 		<hr>
+		<h2>Links</h2>
 		<ul>
 		<li><a href="https://www.dotkernel.com/">DotKernel3 Blog</a></li>
 		  <li><a href="/dotkernel/">DotKernel3 Documentation</a></li>
@@ -200,31 +159,8 @@ img.emoji {
 	</div>
 </div>
  
-
-<!-- DK -------------------------------------------------------------------->
-
-
-
-<script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?sensor=false&#038;key=AIzaSyAWkqWyThIug7Bk-4X5tIFUeWIb5gCDIhY&#038;ver=1.0.3'></script>
-
-<script type='text/javascript' src='https://www.dotkernel.com/wp-includes/js/imagesloaded.min.js?ver=3.2.0'></script>
-
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/main.js?ver=1'></script>
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
-
-
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/jquery.flexslider-min.js?ver=2.2.2'></script>
-
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/jquery.scrollUp.min.js?ver=2.4.0'></script>
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/jquery.smooth-scroll.min.js?ver=1.5.3'></script>
-
-
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/headhesive.min.js?ver=1.1.1'></script>
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/jquery.nicescroll.min.js?ver=3.5.4'></script>
-
-
-
-
 
 </body>
 </html>
