--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -4,6 +4,9 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en-US"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en-US"> <!--<![endif]-->
+
+
+
 <head>
   <meta charset="utf-8">
   <title>Documentation | DotKernel PHP Application Framework</title>
@@ -161,6 +164,10 @@
  
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/main.js?ver=1'></script>
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
+
+<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
+<link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
+
 
 </body>
 </html>
