--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -165,5 +165,7 @@
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/main.js?ver=1'></script>
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
 
+<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
+
 </body>
 </html>
