added links to "edit on github" button

--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -1,18 +1,16 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en-US"> <![endif]-->
+<!--[if lt IE 7]>		<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
+<!--[if IE 7]>		 <html class="no-js lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
+<!--[if IE 8]>		 <html class="no-js lt-ie9" lang="en-US"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en-US"> <!--<![endif]-->
 
 
 
 <head>
-  <meta charset="utf-8">
-  <title>Documentation | DotKernel PHP Application Framework</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel='dns-prefetch' href='//maps.googleapis.com' />
+	<meta charset="utf-8">
+	<title>Documentation | DotKernel PHP Application Framework</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/bootstrap.min.css?ver=3.1.1">
 <link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/app.css?ver=1">
@@ -26,38 +24,31 @@
 <script type='text/javascript' src='https://www.dotkernel.com/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
 
 
-<link rel='https://api.w.org/' href='https://www.dotkernel.com/wp-json/' />
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://www.dotkernel.com/xmlrpc.php?rsd" />
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://www.dotkernel.com/wp-includes/wlwmanifest.xml" /> 
-<meta name="generator" content="WordPress 4.7.3" />
-<link rel="canonical" href="https://www.dotkernel.com/docs/" />
-<link rel='shortlink' href='https://www.dotkernel.com/?p=60' />
-
-  
 <link rel="shortcut icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
 <link rel="icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
+
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,500,600' rel='stylesheet' type='text/css'>
 
-
-<link rel="stylesheet" href="docs.css" type="text/css">
 </head>
-<body class="page-template-default page page-id-60 page-parent">
+
+<body class="page-template-default page page-parent">
 	<header class="banner navbar navbar-default navbar-static-top" role="banner" >
 		<div class="container">
-	        <div class="navbar-header">
-	            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	                <span class="sr-only">Toggle navigation</span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	            </button>
-	            <div id="logo">
-	                <a href="https://www.dotkernel.com/">
-						<img class="logo-main logo-reg" src="https://www.dotkernel.com/wp-content/uploads/logos/logo-base.svg" alt="DotKernel PHP Application Framework" onerror="this.onerror=null; this.src=https://www.dotkernel.com/wp-content/uploads/2015/05/logo-base@2x-171x35.png"  height='35' width='171' />                   
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div id="logo">
+					<a href="https://www.dotkernel.com/">
+						<img class="logo-main logo-reg" src="https://www.dotkernel.com/wp-content/uploads/logos/logo-base.svg" alt="DotKernel PHP Application Framework" onerror="this.onerror=null; this.src=https://www.dotkernel.com/wp-content/uploads/2015/05/logo-base@2x-171x35.png"	height='35' width='171' />					 
 					</a>
-	            </div>
-	        </div>
+				</div>
+			</div>
+			
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 				<ul id="menu-main-menu" class="nav navbar-nav"><li class="menu-documentation"><a href="https://www.dotkernel.com/docs/v3/">Documentation</a></li>
 					<li class="menu-how-tos"><a href="https://www.dotkernel.com/category/how-to/">How to&#8217;s</a></li>
@@ -69,94 +60,94 @@
 							<li class="menu-download-v1"><a href="https://www.dotkernel.com/download/">Download v1</a></li>
 						</ul>
 					</li>
-				</ul>    	
+				</ul>		
 			</nav>
 		</div>
-	</header>  
+	</header>	
 	<div class="wrap" role="document">
 		<div class="content">
 	<div class="inner-container">
 
 	<div class="subheader"></div>
 
-    <div class="container">
-            <div class="row">
-                <section id="themo_page_header_1" class="page-title left ">
-                    <h1>Documentation</h1>
-                </section>	
-             </div>
-        </div>
+	<div class="container">
+			<div class="row">
+				<section id="themo_page_header_1" class="page-title left ">
+					<h1>Documentation</h1>
+				</section>	
+			 </div>
+		</div>
 	<div class="meta-border content-width"></div>
 
 	<div class='container'>
 		<div class='row'>	
-        	<div class="main col-sm-8 col-sm-push-4" role="main">    
+			<div class="main col-sm-8 col-sm-push-4" role="main">	
 				<div>
-					<section id="" class=" content-editor "  >
-				        <div class="row">
-				            <div class="col-md-12">
-				            <a href="#" class="edit_button">Edit on GitHub</a>
+					<section id="" class=" content-editor "	>
+						<div class="row">
+							<div class="col-md-12">
+							<a href="https://github.com/dotkernel/dotkernel/edit/master/docs/{{ page.path | replace:'.html','.md' }}" target="_blank" class="edit_button">Edit on GitHub</a>
 							{{ content }}
-							</div>                            	
-				        </div>
+							</div>								
+						</div>
 					</section>
 					</div>
-	        <!-- Comment form for pages -->
-		        <div class="row">
+			<!-- Comment form for pages -->
+				<div class="row">
 					<div class="col-md-12">
-		            </div>
-	        	</div>
-	        <!-- End Comment form for pages -->
-    
-    		</div><!-- /.main -->    
-        <aside class="sidebar side-left col-sm-4 col-sm-pull-8" role="complementary">
+					</div>
+				</div>
+			<!-- End Comment form for pages -->
+	
+			</div><!-- /.main -->	
+		<aside class="sidebar side-left col-sm-4 col-sm-pull-8" role="complementary">
 
 	<div id="dk3DocsSideMenu">
 		<h2 id="before-starting">Before starting</h2>
 		<ul>
-		  <li><a href="/dotkernel/Overview/">Overview</a></li>
-		  <li><a href="/dotkernel/Prerequisites/">Prerequisites</a></li>
-		  <li>Requirements(to be added)</li>
+			<li><a href="/dotkernel/Overview/">Overview</a></li>
+			<li><a href="/dotkernel/Prerequisites/">Prerequisites</a></li>
+			<li>Requirements(to be added)</li>
 		</ul>
 		
 		<h2 id="introduction-to-dk3">Introduction to DK3</h2>
 		<ul>
-		  <li><a href="/dotkernel/Getting-Started/">Getting Started</a></li>
+			<li><a href="/dotkernel/Getting-Started/">Getting Started</a></li>
 		</ul>
 		
 		<h2 id="working-with-dk3">Working with DK3</h2>
 		<ul>
-		  <li><a href="/dotkernel/Guidelines/">Guidelines</a></li>
-		  <li><a href="/dotkernel/Packages/">dot-* packages</a></li>
+			<li><a href="/dotkernel/Guidelines/">Guidelines</a></li>
+			<li><a href="/dotkernel/Packages/">dot-* packages</a></li>
 		</ul>
 		<hr>
 		<h2>Links</h2>
 		<ul>
 		<li><a href="https://www.dotkernel.com/">DotKernel3 Blog</a></li>
-		  <li><a href="/dotkernel/">DotKernel3 Documentation</a></li>
-		  <li><a href="https://github.com/dotkernel/">DotKernel3 at Github</a></li>
-		  <li><a href="http://stackoverflow.com/questions/tagged/dotkernel3">DotKernel3 at Stackoverflow</a></li>
-		  <li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel3 at Packagist</a></li>
-		  <li><a href="https://gitter.im/dotkernel3">DotKernel3 at Gitter</a></li>
+			<li><a href="/dotkernel/">DotKernel3 Documentation</a></li>
+			<li><a href="https://github.com/dotkernel/">DotKernel3 at Github</a></li>
+			<li><a href="http://stackoverflow.com/questions/tagged/dotkernel3">DotKernel3 at Stackoverflow</a></li>
+			<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel3 at Packagist</a></li>
+			<li><a href="https://gitter.im/dotkernel3">DotKernel3 at Gitter</a></li>
 		</ul>
 	</div>
-	</div>   
+	</div>	 
 	</aside><!-- /.sidebar -->
-               
-    
-    </div><!-- /.container --></div><!-- /.row --></div><!-- /.inner-container -->
-    </div><!-- /.content -->
-  </div><!-- /.wrap -->
+				 
+	
+	</div><!-- /.container --></div><!-- /.row --></div><!-- /.inner-container -->
+	</div><!-- /.content -->
+	</div><!-- /.wrap -->
 
-  
+	
 <div class="prefooter"></div>
 
  
-<div class="footer-btm-bar">        
-	<div class="container">    
+<div class="footer-btm-bar">		
+	<div class="container">	
 		<div class="footer-copyright row">
 			<div class="col-xs-12">
-				<p><span class='footer_copy'>© 2009 - 2016 DotBoost Technologies Inc. <br />© 2017 Apidemia Inc.</span>  </p>
+				<p><span class='footer_copy'>© 2009 - 2016 DotBoost Technologies Inc. <br />© 2017 Apidemia Inc.</span>	</p>
 			</div>
 		</div>
 	</div>
