--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -7,7 +7,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Documentation | DotKernel PHP Application Framework</title>
+	<title>DotKernel3 Documentation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- BEGIN Styling -->
@@ -43,11 +43,11 @@
 				</button>
 				<div id="logo">
 					<a href="https://www.dotkernel.com/">
-						<img class="logo-main logo-reg" src="https://www.dotkernel.com/wp-content/uploads/logos/logo-base.svg" alt="DotKernel PHP Application Framework" onerror="this.onerror=null; this.src=https://www.dotkernel.com/wp-content/uploads/2015/05/logo-base@2x-171x35.png"	height='35' width='171' />					
+						<img class="logo-main logo-reg" src="https://www.dotkernel.com/wp-content/uploads/logos/logo-base.svg" alt="DotKernel3 - A collection of PSR-7 Middleware Applications" onerror="this.onerror=null; this.src=https://www.dotkernel.com/wp-content/uploads/2015/05/logo-base@2x-171x35.png"	height='35' width='171' />
 					</a>
 				</div>
 			</div>
-		
+
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 				<ul id="menu-main-menu" class="nav navbar-nav"><li class="menu-documentation"><a href="https://www.dotkernel.com/docs/v3/">Documentation</a></li>
 					<li class="menu-how-tos"><a href="https://www.dotkernel.com/category/how-to/">How to&#8217;s</a></li>
