--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -78,3 +78,5 @@ h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight:500 ;}
 
 .edit_button { float: right; background-color: transparent; border: none; }
 #dk3DocsSideMenu h2 { font-size: 20px; }
+#docs-home { color: #515151; }
+#docs-home:hover { color: #666; }
