moved styling to dk3docs.css

--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -158,6 +158,7 @@
 
 <!-- Styling: Load this one last -->
 <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
+<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css" media="screen" type="text/css">
 
 </body>
 </html>
