added static css. fixed build error

--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -157,8 +157,8 @@
 <script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
 
 <!-- Styling: Load this one last -->
-<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
-<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css" media="screen" type="text/css">
+<!--   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">-->
+<link rel="stylesheet" href="{{ 'https://www.dotkernel.com/docs-v3/assets/css/dk3docs.css' | relative_url }} media="screen" type="text/css">
 
 </body>
 </html>
