--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -160,7 +160,7 @@
 
 <!-- Styling: Load this one last -->
 <!--   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">-->
-<link rel="stylesheet" href="{{ 'https://www.dotkernel.com/docs-v3/assets/css/dk3docs.css' | relative_url }} media="screen" type="text/css">
+<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css' | relative_url }} media="screen" type="text/css">
 
 </body>
 </html>
