separated side menu

--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -103,33 +103,7 @@
 			</div><!-- /.main -->
 		<aside class="sidebar side-left col-sm-4 col-sm-pull-8" role="complementary">
 	<div id="dk3DocsSideMenu">
-		<h2 id="docs-home"><a href="#">Documentation Main Page</a></h2>
-		<h2 id="before-starting">Before starting</h2>
-		<ul>
-			<li><a href="{{ site.url }}/Overview/">Overview</a></li>
-			<li><a href="{{ site.url }}/dotkernel/Prerequisites/">Prerequisites</a></li>
-		</ul>
-	
-		<h2 id="introduction-to-dk3">Introduction to DK3</h2>
-		<ul>
-			<li><a href="{{ site.url }}/Getting-Started/">Getting Started</a></li>
-		</ul>
-	
-		<h2 id="working-with-dk3">Working with DK3</h2>
-		<ul>
-			<li><a href="{{ site.url }}/Guidelines/">Guidelines</a></li>
-			<li><a href="{{ site.url }}/Packages/">dot-* packages</a></li>
-		</ul>
-		<hr>
-		<h2>Links</h2>
-		<ul>
-		<li><a href="https://www.dotkernel.com/">DotKernel3 Blog</a></li>
-			<li><a href="/dotkernel/">DotKernel3 Documentation</a></li>
-			<li><a href="https://github.com/dotkernel/">DotKernel3 at Github</a></li>
-			<li><a href="http://stackoverflow.com/questions/tagged/dotkernel3">DotKernel3 at Stackoverflow</a></li>
-			<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel3 at Packagist</a></li>
-			<li><a href="https://gitter.im/dotkernel3">DotKernel3 at Gitter</a></li>
-		</ul>
+		{% include sidemenu.htm %}
 	</div>
 	</div>
 	</aside><!-- /.sidebar -->
