--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -9,26 +9,7 @@
 	<meta charset="utf-8">
 	<title>DotKernel3 Documentation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- BEGIN Styling -->
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/bootstrap.min.css?ver=3.1.1">
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/app.css?ver=1">
-<style id='roots_app-inline-css' type='text/css'>
-/* Navigation Padding */
-.navbar .navbar-nav {margin-top:12px}
-.navbar .navbar-toggle {top:14px}
-</style>
-
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/responsive.css?ver=1">
-<script type='text/javascript' src='https://www.dotkernel.com/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
-
-
-<link rel="shortcut icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
-<link rel="icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
-
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,500,600' rel='stylesheet' type='text/css'>
-<!-- END Styling -->
+	{% include styling.htm %}
 </head>
 
 <body class="page-template-default page page-parent">
@@ -126,12 +107,8 @@
 	</div>
 </div>
 
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/main.js?ver=1'></script>
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
+{% include scripts.htm %}
 
-<!-- Styling: Load this one last -->
-<!--   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">-->
-<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css' | relative_url }}" media="screen" type="text/css">
 
 </body>
 </html>
