--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -1,3 +1,4 @@
+<!-- BEGIN sidemenu -->
 <h2 id="docs-home"><a href="#">Documentation Main Page</a></h2>
 <h2 id="before-starting">Before starting</h2>
 <ul>
@@ -25,3 +26,4 @@
 	<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel3 at Packagist</a></li>
 	<li><a href="https://gitter.im/dotkernel3">DotKernel3 at Gitter</a></li>
 </ul>
+<!-- END sidemenu -->
