--- a/docs/_includes/scripts.htm
+++ b/docs/_includes/scripts.htm
@@ -1,8 +1,9 @@
+<!--  BEGIN Scripts -->
 
-<!--  replace with CDN ???  -->
-<script type='text/javascript' src='https://www.dotkernel.com/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous">
+</script>
 
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/main.js?ver=1'></script>
-
-<!--  replace with CDN ???  -->
-<script type='text/javascript' src='https://www.dotkernel.com/wp-content/themes/dotkernel/assets/js/vendor/bootstrap.min.js?ver=3.1.1'></script>
+<!-- END Scripts -->
