--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -1,22 +1,13 @@
 <!-- BEGIN Styling -->
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/bootstrap.min.css?ver=3.1.1">
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/app.css?ver=1">
-<style id='roots_app-inline-css' type='text/css'>
-/* Navigation Padding */
-.navbar .navbar-nav {margin-top:12px}
-.navbar .navbar-toggle {top:14px}
-</style>
 
-<link rel="stylesheet" href="https://www.dotkernel.com/wp-content/themes/dotkernel/assets/css/responsive.css?ver=1">
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet"> 
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<link rel="shortcut icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
-<link rel="icon" href="https://www.dotkernel.com/wp-content/uploads/2015/05/favicon.ico" type="image/icon">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,500,600' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
 <!-- END Styling -->
-
-<!-- Styling: Load this one last -->
-<!--   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">-->
-<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css' | relative_url }}" media="screen" type="text/css">
