--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -7,7 +7,10 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+<!-- From style.scss -->
 <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+<!-- DK3 docs CSS -->
+<link rel="stylesheet" href="assets/css/dk3docs.css" type="text/css">
 
 <!-- END Styling -->
