--- a/docs/assets/css/dk3docs.css
+++ b/docs/assets/css/dk3docs.css
@@ -1,80 +1,52 @@
-
+@CHARSET "ISO-8859-1";
 body,p{font-family:Source Sans Pro ;font-size:16px ;font-weight:300 ;}
 .navbar .navbar-nav > li > a{font-family:Montserrat ;font-size:16px ;font-weight:400 ;}
-h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight:500 ;}
+h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight:800 ;}
 
-/* Custom Color CSS #2b8dd6 */
-#main-flex-slider .slides h1,.accent,.light-text .btn-ghost:hover,.light-text .googlemap a,.light-text .pricing-column.highlight .btn-ghost:hover,.light-text .pricing-column.highlight .btn-standard,.navbar .navbar-nav .dropdown-menu li a:hover,.navbar .navbar-nav .dropdown-menu li.active a,.navbar .navbar-nav .dropdown-menu li.active a:hover,.page-title h1,.panel-title i,.pricing-column.highlight .btn-ghost:hover,.pricing-column.highlight .btn-standard,.pricing-cost,.simple-cta span,.team-member-social a .soc-icon:hover,a{color:#2b8dd6}.footer .widget-title:after,.navbar .navbar-nav>li.active>a:after,.navbar .navbar-nav>li.active>a:focus:after,.navbar .navbar-nav>li.active>a:hover:after,.navbar .navbar-nav>li>a:hover:after{background-color:#2b8dd6}.accordion .accordion-btn .btn-ghost:hover,.btn-ghost:hover,.btn-standard,.circle-lrg-icon i,.circle-lrg-icon span,.light-text .pricing-table .btn-ghost:hover,.pager li>a:hover,.pager li>span:hover,.pricing-column.highlight{background-color:#2b8dd6;border-color:#2b8dd6}.accordion .accordion-btn .btn-ghost,.btn-ghost,.circle-lrg-icon i:hover,.circle-lrg-icon span:hover,.light-text .pricing-table .btn-ghost{color:#2b8dd6;border-color:#2b8dd6}.search-form input:focus,.widget select:focus,form input:focus,form select:focus,form textarea:focus{border-color:#2b8dd6!important}.circle-med-icon i,.circle-med-icon span,.frm_form_submit_style,.frm_form_submit_style:hover,.with_frm_style .frm_submit input[type=button],.with_frm_style .frm_submit input[type=button]:hover,.with_frm_style .frm_submit input[type=submit],.with_frm_style .frm_submit input[type=submit]:hover,.with_frm_style.frm_login_form input[type=submit],.with_frm_style.frm_login_form input[type=submit]:hover,form input[type=submit],form input[type=submit]:hover{background:#2b8dd6}.footer .tagcloud a:hover,.headhesive--clone .navbar-nav>li.active>a:after,.headhesive--clone .navbar-nav>li.active>a:focus:after,.headhesive--clone .navbar-nav>li.active>a:hover:after,.headhesive--clone .navbar-nav>li>a:hover:after,.search-submit,.search-submit:hover,.simple-conversion .with_frm_style input[type=submit],.simple-conversion .with_frm_style input[type=submit]:focus,.simple-conversion form input[type=submit],.simple-conversion form input[type=submit]:focus,.widget .tagcloud a:hover{background-color:#2b8dd6!important}.btn-cta{background-color:#00d148}
-.home .navbar {  background-color: #C71F3A; }
-.home .navbar .navbar-nav > li > a { color: #FFFFFF; }
-.home .navbar .navbar-nav > li.active > a { color: #FFFFFF; }
-.home  .navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li.active > a:hover { color: #212121; }
-.headhesive--clone { background-color: #FFFFFF !important; }
-.headhesive--clone .navbar-nav > li > a { color: #212121 !important; }
-.headhesive--clone .navbar-nav > li > a:hover { color: #212121 !important; }
-.navbar .navbar-nav > li > a:hover::after, .navbar .navbar-nav > li.active > a::after, .navbar .navbar-nav > li.active > a:hover::after, .navbar .navbar-nav > li.active > a:focus::after { height: 0px; width: 0px; }
-.banner[data-transparent-header="true"] .navbar-nav > li > a:hover, .banner[data-transparent-header="true"] .navbar-nav > li.active > a:hover { color: #FFFFFF; }
-.banner[data-transparent-header="true"] { border-bottom: 0px !important; }
+.navbar .navbar-nav { float: right; margin-top: 12px; }
+
+#logo { display: block; float: left; margin-bottom: 20px; margin-left: 0; margin-right: 0; margin-top: 20px; }
+header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50px; padding-right: 50px; padding-top: 0; width: 100%; }
+
+.navbar-default .navbar-toggle .icon-bar { background-color: #c71f3a; }
+
+.navbar-default .navbar-toggle { border: none; }
+.navbar-default .navbar-toggle:hover { background-color: transparent; }
+
+.page-title { border-bottom-color: #e6e6e6; border-bottom-style: solid; border-bottom-width: 2px; }
+.page-title.left { padding-bottom: 60px; padding-left: 0; padding-right: 30%; padding-top: 60px; }
+.page-title { margin-bottom: 0; margin-left: 15px; margin-right: 15px; margin-top: 0; }
+
 .page-title h1 { color: #111523; text-transform: uppercase; }
 
-.light-text p.home_version { margin-bottom: 0px; padding-top: 5px; font-size: 13px; }
-.light-text p.home_version_det { font-size: 16px; color: #FFC000; }
+.footer-btm-bar { background-attachment: scroll; background-clip: border-box; background-color: #e9ebf3; background-image: none; background-origin: padding-box; background-position-x: 0;background-position-y: 0; background-repeat: repeat; background-size: auto auto; border-top-color: #bbc6da; border-top-style: solid; border-top-width: 1px; width: 100%; padding: 25px 0px 15px 0px; margin-top: 50px; }
+.footer-btm-bar span { font-size: 12px; color: #4a4a4a; font-weight: 500; }
 
-.light-text .btn-ghost { color: #FFFFFF; background-color: #FF5E00; border-color: #FF5E00; }
-.light-text .btn-ghost:hover { color: #FF5E00; }
-.btn-cta { background-color: #FE5E00; }
-.btn:hover, .btn:focus { color: #FFFFFF; }
-
-.sidebar .widget-title::after { height: 0px; }
-
-.mantis_roadmap tt { word-wrap: break-word; }
-
-.footer { background: #e9ebf3; color: #4a4a4a;}
-.footer p, .footer a, .footer a:hover { color: #4a4a4a; }
-.footer h1, .footer h2, .footer h3, .footer h4, .footer h5, .footer h6 { color: #404d78; }
-.footer-btm-bar { background: #e9ebf3; border-top: 1px solid #bbc6da; }
-
-.navbar-default .navbar-toggle { border-color: #FFFFFF; }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:active { background-color: #FFFFFF;  }
-.navbar-default .navbar-toggle .icon-bar { background-color: #C71F3A; }
-
-@media (max-width: 782px) {
-    .navbar {  background-color: #FFFFFF; }
-    .navbar .navbar-nav > li > a { color: #212121;}
-    .navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li.active > a:hover { color: #000000;}
-    .navbar .navbar-nav .open .dropdown-toggle { background: #FFFFFF !important; }
-    .navbar .navbar-nav .dropdown-menu { background-color: #FFFFFF; }
-    .container { width: 100% !important;}
-    .page-title h1 { font-size: 220%; }
-    .page-title.centered { padding: 20px 5px; }
-    .page-title.centered h1 { font-size: 200% ; }
-    .page-title.left { padding-right: 0px; }
-    .page-title.left h1 { font-size: 170%; line-height: 30px; }
-    .simple-cta .themo-action-text { padding: 0px 15px; }
-}
-
-.footer .tagcloud a:hover, .headhesive--clone .navbar-nav > li.active > a::after, .headhesive--clone .navbar-nav > li.active > a:focus::after, .headhesive--clone .navbar-nav > li.active > a:hover::after, .headhesive--clone .navbar-nav > li > a:hover::after, .search-submit, .search-submit:hover, .simple-conversion .with_frm_style input[type="submit"], .simple-conversion .with_frm_style input[type="submit"]:focus, .simple-conversion form input[type="submit"], .simple-conversion form input[type="submit"]:focus, .widget .tagcloud a:hover {
-    background-color: #C71F3A !important;
-}
-
-.circle-med-icon i, .circle-med-icon span, .frm_form_submit_style, .frm_form_submit_style:hover, .with_frm_style .frm_submit input[type="button"], .with_frm_style .frm_submit input[type="button"]:hover, .with_frm_style .frm_submit input[type="submit"], .with_frm_style .frm_submit input[type="submit"]:hover, .with_frm_style.frm_login_form input[type="submit"], .with_frm_style.frm_login_form input[type="submit"]:hover, form input[type="submit"], form input[type="submit"]:hover {
-    background-color: #C71F3A;
-}
-
-.footer .widget-title::after, .navbar .navbar-nav > li.active > a::after, .navbar .navbar-nav > li.active > a:focus::after, .navbar .navbar-nav > li.active > a:hover::after, .navbar .navbar-nav > li > a:hover::after {
-    background-color: #C71F3A;
-}
-
-.footer .widget-title::after, .navbar .navbar-nav > li.active > a::after, .navbar .navbar-nav > li.active > a:focus::after, .navbar .navbar-nav > li.active > a:hover::after, .navbar .navbar-nav > li > a:hover::after {
-    background-color: #212121;
-}
-
-.accordion .accordion-btn .btn-ghost:hover, .btn-ghost:hover, .btn-standard, .circle-lrg-icon i, .circle-lrg-icon span, .light-text .pricing-table .btn-ghost:hover, .pager li > a:hover, .pager li > span:hover, .pricing-column.highlight {
-    background-color: #C71F3A;
-    border-color: #C71F3A;
-}
+#dk3DocsSideMenu h3 { color: #6d6d6d; font-size: 20px; font-weight: normal; margin-bottom: 20px; padding-bottom: 10px; position: relative; }
+#dk3DocsSideMenu  ul { padding-left: 0px; }
+#dk3DocsSideMenu  ul li:first-child { padding-top: 0; }
+#dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 8px; padding-left: 0; padding-right: 0; padding-top: 8px; }
+#dk3DocsSideMenu ul li a { font-size: 14px; }
 
 .edit_button { float: right; background-color: transparent; border: none; }
-#dk3DocsSideMenu h2 { font-size: 20px; }
-#docs-home { color: #515151; }
-#docs-home:hover { color: #666; }
+.main { padding-top: 20px; }
+
+@media (max-width: 991px) {
+	header.navbar .container { padding: 0px 20px; }
+}
+
+@media (max-width: 782px) {
+	.navbar .navbar-nav { float: left; }
+	.navbar {  background-color: #FFFFFF; }
+	.navbar .navbar-nav > li > a { color: #212121;}
+	.navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li.active > a:hover { color: #000000;}
+	.navbar .navbar-nav .open .dropdown-toggle { background: #FFFFFF !important; }
+	.navbar .navbar-nav .dropdown-menu { background-color: #FFFFFF; }
+	.container { width: 100% !important;}
+	.page-title h1 { font-size: 220%; }
+	.page-title.centered { padding: 20px 5px; }
+	.page-title.centered h1 { font-size: 200% ; }
+	.page-title.left { padding-right: 0px; }
+	.page-title.left h1 { font-size: 170%; line-height: 30px; }
+	.navbar-toggle { left: 20px; top: 15px; }
+}
