changed styling link to static link

--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -11,6 +11,6 @@
 <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css">
 
 <!-- DK3 docs CSS -->
-<link rel="stylesheet" href="{{ '/assets/css/dk3docs.css' | relative_url }}" type="text/css">
+<link rel="stylesheet" href="https://docs.dotkernel.com/assets/css/dk3docs.css" type="text/css">
 
 <!-- END Styling -->
