--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -8,7 +8,7 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <!-- From style.scss -->
-<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css">
+<!--  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css"> -->
 
 <!-- DK3 docs CSS -->
 <link rel="stylesheet" href="https://docs.dotkernel.com/assets/css/dk3docs.css" type="text/css">
