Added link to dk3 docs main page

--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -1,5 +1,5 @@
 <!-- BEGIN sidemenu -->
-<h3 id="docs-home"><a href="#">Documentation Main Page</a></h3>
+<h3 id="docs-home"><a href="https://docs.dotkernel.com">Documentation Main Page</a></h3>
 <h3 id="before-starting">Before starting</h3>
 <ul>
 	<li><a href="{{ site.url }}/Overview/">Overview</a></li>
