--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -42,7 +42,7 @@
 	<div class="container">
 		  <div class="row">
 				<section id="themo_page_header_1" class="page-title left ">
-					<h1>Documentation</h1>
+					<h1>DotKernel3 Documentation</h1>
 				</section>
 			 </div>
 	</div>
