--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -6,12 +6,12 @@
 	<li><a href="{{ site.url }}/Prerequisites/">Prerequisites</a></li>
 </ul>
 
-<h3 id="introduction-to-dk3">Introduction to DK3</h3>
+<h3 id="introduction-to-dk3">Introduction</h3>
 <ul>
 	<li><a href="{{ site.url }}/Getting-Started/">Getting Started</a></li>
 </ul>
 
-<h3 id="working-with-dk3">Working with DK3</h3>
+<h3 id="working-with-dk3">Working with DotKernel 3</h3>
 <ul>
 	<li><a href="{{ site.url }}/Guidelines/">Guidelines</a></li>
 	<li><a href="{{ site.url }}/Packages/">dot-* packages</a></li>
@@ -19,11 +19,10 @@
 <hr>
 <h3>Links</h3>
 <ul>
-<li><a href="https://www.dotkernel.com/">DotKernel3 Blog</a></li>
-	<li><a href="/dotkernel/">DotKernel3 Documentation</a></li>
-	<li><a href="https://github.com/dotkernel/">DotKernel3 at Github</a></li>
-	<li><a href="http://stackoverflow.com/questions/tagged/dotkernel3">DotKernel3 at Stackoverflow</a></li>
-	<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel3 at Packagist</a></li>
-	<li><a href="https://gitter.im/dotkernel3">DotKernel3 at Gitter</a></li>
+	<li><a href="https://www.dotkernel.com/">DotKernel 3 Official Site</a></li>
+	<li><a href="https://github.com/dotkernel/">DotKernel 3 at Github</a></li>
+	<li><a href="https://stackoverflow.com/questions/tagged/dotkernel3">DotKernel 3 at Stackoverflow</a></li>
+	<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel at Packagist</a></li>
+	<li><a href="https://gitter.im/dotkernel3">DotKernel 3 at Gitter</a></li>
 </ul>
 <!-- END sidemenu -->
