--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -1,6 +1,8 @@
 <!-- BEGIN Styling -->
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet"> 
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,500,600' rel='stylesheet' type='text/css'>
+
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
