external links open in new tab
+ style for packages, will be needed later

--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -19,10 +19,10 @@
 <hr>
 <h3>Links</h3>
 <ul>
-	<li><a href="https://www.dotkernel.com/">DotKernel 3 Official Site</a></li>
-	<li><a href="https://github.com/dotkernel/">DotKernel 3 at Github</a></li>
-	<li><a href="https://stackoverflow.com/questions/tagged/dotkernel3">DotKernel 3 at Stackoverflow</a></li>
-	<li><a href="https://packagist.org/search/?q=dotkernel/">DotKernel at Packagist</a></li>
-	<li><a href="https://gitter.im/dotkernel3">DotKernel 3 at Gitter</a></li>
+	<li><a href="https://www.dotkernel.com/" target="_blank">DotKernel 3 Official Site</a></li>
+	<li><a href="https://github.com/dotkernel/" target="_blank">DotKernel 3 at Github</a></li>
+	<li><a href="https://stackoverflow.com/questions/tagged/dotkernel3" target="_blank">DotKernel 3 at Stackoverflow</a></li>
+	<li><a href="https://packagist.org/search/?q=dotkernel/" target="_blank">DotKernel at Packagist</a></li>
+	<li><a href="https://gitter.im/dotkernel3" target="_blank">DotKernel 3 at Gitter</a></li>
 </ul>
 <!-- END sidemenu -->
