--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -25,14 +25,14 @@
 				</div>
 			</div>
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-				<ul id="menu-main-menu" class="nav navbar-nav"><li class="menu-documentation"><a href="https://www.dotkernel.com/docs/v3/">Documentation</a></li>
-					<li class="menu-how-tos"><a href="https://www.dotkernel.com/category/how-to/">How to&#8217;s</a></li>
-					<li class="menu-blog"><a href="https://www.dotkernel.com/blog/">Blog</a></li>
-					<li class="menu-contact-us"><a href="https://www.dotkernel.com/contact/">Contact us</a></li>
+				<ul id="menu-main-menu" class="nav navbar-nav"><li class="menu-documentation"><a href="https://docs.dotkernel.com">Documentation</a></li>
+					<li class="menu-how-tos"><a href="https://www.dotkernel.com/how-to-dotkernel-3//" target="_blank">How to&#8217;s</a></li>
+					<li class="menu-blog"><a href="https://www.dotkernel.com/blog/" target="_blank">Blog</a></li>
+					<li class="menu-contact-us"><a href="https://www.dotkernel.com/contact/" target="_blank">Contact us</a></li>
 					<li class="dropdown menu-archive"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li class="menu-documentation-v1"><a href="https://www.dotkernel.com/docs/">Documentation v1</a></li>
-							<li class="menu-download-v1"><a href="https://www.dotkernel.com/download/">Download v1</a></li>
+							<li class="menu-documentation-v1"><a href="https://www.dotkernel.com/docs/" target="_blank">Documentation v1</a></li>
+							<li class="menu-download-v1"><a href="https://www.dotkernel.com/download/" target="_blank">Download v1</a></li>
 						</ul>
 					</li>
 				</ul>
