--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -1,7 +1,7 @@
 <!-- BEGIN Styling -->
 
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,500,600' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i" rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel='stylesheet' type='text/css'>
 
 
 <!-- Latest compiled and minified CSS -->
