changed logo link target (dotkernel.com -> docs.dotkernel.com)

--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -19,7 +19,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<div id="logo">
-					<a href="https://www.dotkernel.com/">
+					<a href="https://docs.dotkernel.com/">
 						<img class="logo-main logo-reg" src="https://www.dotkernel.com/wp-content/uploads/logos/logo-base.svg" alt="DotKernel PHP Application Framework" onerror="this.onerror=null; this.src=https://www.dotkernel.com/wp-content/uploads/2015/05/logo-base@2x-171x35.png"  height='35' width='171' />
 					</a>
 				</div>
