--- a/docs/_layouts/default.htm
+++ b/docs/_layouts/default.htm
@@ -53,7 +53,9 @@
 					<section>
 						<div class="row">
 							<div class="col-md-12">
-								<a class="smallerFont edit_button" href="https://github.com/dotkernel/dotkernel/edit/master/docs/{{ page.path | replace:'.html','.md' }}" target="_blank">Edit on GitHub</a>
+								<div class="edit">
+									<a class="smallerFont edit_button" href="https://github.com/dotkernel/dotkernel/edit/master/docs/{{ page.path | replace:'.html','.md' }}" target="_blank">Edit on GitHub</a>
+								</div>
 								{{ content }}
 							</div>
 						</div>
