--- a/docs/assets/css/dk3docs.css
+++ b/docs/assets/css/dk3docs.css
@@ -1,13 +1,24 @@
 @CHARSET "ISO-8859-1";
 body,p{font-family:Source Sans Pro ;font-size:16px ;font-weight:300 ;}
+body a{ color: #2b8dd6; }
 .navbar .navbar-nav > li > a{font-family:Montserrat ;font-size:16px ;font-weight:400 ;}
-h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight:400 ;}
+h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight: 500 ; color: #515151;}
+
+h2 { font-size: 28px; }
+h3 { font-size: 22px; }
+h4 { font-size: 20px; }
+h5 { font-size: 18px; }
+h6 { font-size: 15px; }
+
+.navbar { background-color: #fff; margin-bottom: 0; }
+.banner { box-shadow: 0 1px 2px rgba(43, 48, 51, 0.08); z-index: 20; }
 
 .navbar .navbar-nav { float: right; margin-top: 12px; }
 
 #logo { display: block; float: left; margin-bottom: 20px; margin-left: 0; margin-right: 0; margin-top: 20px; }
 header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50px; padding-right: 50px; padding-top: 0; width: 100%; }
 
+.navbar .navbar-nav > li > a { color: #828282; }
 .navbar-default .navbar-toggle .icon-bar { background-color: #c71f3a; }
 
 .navbar-default .navbar-toggle { border: none; }
@@ -17,25 +28,32 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 .page-title.left { padding-bottom: 60px; padding-left: 0; padding-right: 30%; padding-top: 60px; }
 .page-title { margin-bottom: 0; margin-left: 15px; margin-right: 15px; margin-top: 0; }
 
-.page-title h1 { color: #111523; text-transform: uppercase; }
+.page-title h1 { color: #111523; text-transform: uppercase; font-weight: 500; }
 
 .footer-btm-bar { background-attachment: scroll; background-clip: border-box; background-color: #e9ebf3; background-image: none; background-origin: padding-box; background-position-x: 0;background-position-y: 0; background-repeat: repeat; background-size: auto auto; border-top-color: #bbc6da; border-top-style: solid; border-top-width: 1px; width: 100%; padding: 25px 0px 15px 0px; margin-top: 50px; }
-.footer-btm-bar span { font-size: 12px; color: #4a4a4a; font-weight: 500; }
+.footer-btm-bar span { font-size: 16px; color: #4a4a4a; font-weight: 500; }
 
 #dk3DocsSideMenu h3 { color: #6d6d6d; font-size: 20px; font-weight: normal; margin-bottom: 20px; padding-bottom: 10px; position: relative; }
 #dk3DocsSideMenu  ul { padding-left: 0px; }
 #dk3DocsSideMenu  ul li:first-child { padding-top: 0; }
 #dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 8px; padding-left: 0; padding-right: 0; padding-top: 8px; }
-#dk3DocsSideMenu ul li a { font-size: 14px; }
+#dk3DocsSideMenu ul li a { font-size: 16px; }
 
-.edit_button { float: right; background-color: transparent; border: none; }
+.edit { text-align: right; }
+.edit_button { background-color: transparent; border: none; }
 .main { padding-top: 20px; color: #5c5c5c; }
+.caret { display: none; }
 
-@media (max-width: 991px) {
-	header.navbar .container { padding: 0px 20px; }
+@media (max-width: 1200px) {
+	header.navbar .container { max-width: 970px; padding: 0px 15px; }
 }
 
-@media (max-width: 782px) {
+@media (max-width: 991px) {
+	header.navbar .container { max-width: 750px; }
+}
+
+@media (max-width: 767px) {
+	header.navbar .container { max-width: 100% !important; padding: 0px 30px; }
 	.navbar .navbar-nav { float: left; }
 	.navbar {  background-color: #FFFFFF; }
 	.navbar .navbar-nav > li > a { color: #212121;}
@@ -49,9 +67,7 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 	.page-title.left { padding-right: 0px; }
 	.page-title.left h1 { font-size: 170%; line-height: 30px; }
 	.navbar-toggle { left: 20px; top: 15px; }
+	.caret { display: inline-block; }
 }
 
-
-.smallerFont{
-	font-size: 13px;
-}
+.smallerFont { font-size: 13px; }
