--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -13,6 +13,13 @@
 <!--  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css"> -->
 
 <!-- DK3 docs CSS -->
-<link rel="stylesheet" href="https://docs.dotkernel.com/assets/css/dk3docs.css" type="text/css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/dk3docs.css" type="text/css">
 
 <!-- END Styling -->
+
+<!-- Dynamic styling -->
+<style>
+.arrow_down { background-image: url('{{ site.url }}/assets/images/arrow_down.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
+.arrow_up { background-image: url('{{ site.url }}/assets/images/arrow_up.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
+.logo-main{ width: 171px; height: 40px; }
+</style>
