added notes for contributors

--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -17,9 +17,17 @@
 
 <!-- END Styling -->
 
-<!-- Dynamic styling -->
+<!-- BEGIN Dynamic styling -->
+<!--
+ **NOTE** :
+ 
+ Thank you for your contribution to DotKernel 3
+
+ Please do not use static resources or URL's in css, any URL should be reflected here 
+-->
 <style>
 .arrow_down { background-image: url('{{ site.url }}/assets/images/arrow_down.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
 .arrow_up { background-image: url('{{ site.url }}/assets/images/arrow_up.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
 .logo-main{ width: 171px; height: 40px; }
 </style>
+<!-- END Dynamic Styling -->
