--- a/docs/_includes/scripts.htm
+++ b/docs/_includes/scripts.htm
@@ -13,3 +13,15 @@
 
 
 <!-- END Scripts -->
+
+<!-- BEGIN Google Analytics  -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97413802-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- END Google Analytics -->
