--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -20,7 +20,7 @@
         </div>
     </div>
     
-    <div class="panel">
+    <div class="panel panel-default">
         <div class="panel-heading"  >
             <div class="panel-title" >
                 <button class="arrow_down" data-toggle="collapse" data-target="#prerequisites_collapse"></button>
@@ -49,7 +49,7 @@
 
 
 <h3 id="before-starting">Introduction</h3>
-    <div class="panel">
+    <div class="panel panel-default">
         <div class="panel-heading"  >
             <div class="panel-title" >
                 <button class="arrow_down" data-toggle="collapse" data-target="#getting_started_collapse"></button>
@@ -69,7 +69,7 @@
 
 <h3 id="before-starting">Working with DotKernel 3</h3>
 
-    <div class="panel">
+    <div class="panel panel-default">
         <div class="panel-heading"  >
             <div class="panel-title" >
                 <button class="arrow_down" data-toggle="collapse" data-target="#guidelines_collapse"></button>
@@ -86,7 +86,7 @@
             </ul>
         </div>
     </div>
-    <div class="panel">
+    <div class="panel panel-default">
         <div class="panel-heading"  >
             <div class="panel-title" >
                 <button class="arrow_down" data-toggle="collapse" data-target="#dot_packages_collapse"></button>
