fixed side menu, tutorials section was missing

--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -65,14 +65,14 @@
                 <li class="list-group-item">DotKernel 3 features</li>
             </ul>
         </div>
-                    <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#tutorials_collapse"></button>
-                <a  href="{{ site.url }}/Tutorials/" >Tutorials</a>
-            </div>
+        
+        <div class="panel-title" >
+            <button class="arrow_down" data-toggle="collapse" data-target="#tutorials_collapse"></button>
+            <a  href="{{ site.url }}/Tutorials/" >Tutorials</a>
         </div>
         <div id="tutorials_collapse" class="panel-collapse collapse">
             <ul class="list-group">
-                <li class="list-group-item"><a href="{{ site.url Tutorials/Creating-a-Contact-Us-Page/">Creating a Contact US Page</a></li>
+                <li class="list-group-item"><a href="{{ site.url }}/Tutorials/Creating-a-Contact-Us-Page/">Creating a Contact US Page</a></li>
                 <li class="list-group-item">More tutorials soon</li>
             </ul>
         </div>
